# wifi-setup

./: Cargo.toml  README.md  Rocket.toml  iptables.sh
debian/: wifi-setup.service
src/: main.rs
static/: connecting.js  demo.html  demo.js  main.html  ssid-list.js  ssids.js  style.css
templates/: connecting.hbs  ssid-list.hbs  ssid.hbs
