[package]
name = "wifi-setup"
version = "0.1.0"
authors = ["Callum Moseley <callum.moseley1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controller-emulator = { path = "../controller-emulator" }

rocket = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]